แก้ UI ของสปริ้น2และController
