# backend/docs/swagger.json
@@ -736,7 +736,7 @@
                 }
             }
         },
-        "/equipmentrentalbymembers/{id}": {
+        "/equipmentrentalbymembers": {
             "get": {
                 "description": "get GetEquipmentrentalbyMember by ID",
                 "produces": [
@@ -746,11 +746,10 @@
                 "operationId": "get-GetEquipmentrentalbyMember",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "GetEquipmentrentalbyMember ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "type": "string",
+                        "description": "Name",
+                        "name": "name",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -3241,7 +3240,6 @@
         "OAuth2Application": {
             "type": "oauth2",
             "flow": "application",
-            "authorizationUrl": "",
             "tokenUrl": "https://example.com/oauth/token",
             "scopes": {
                 "admin": " Grants read and write access to administrative information",
@@ -3260,7 +3258,6 @@
         "OAuth2Password": {
             "type": "oauth2",
             "flow": "password",
-            "authorizationUrl": "",
             "tokenUrl": "https://example.com/oauth/token",
             "scopes": {
                 "admin": " Grants read and write access to administrative information",
